Filled cap of curve with weld+bevel modifier doesn't have smooth shading #74755

Closed
opened 2020-03-14 13:50:28 +01:00 by Emir Sinan Gürlek · 7 comments

System Information
Operating system: Windows-10 64 Bits
Graphics card: GeForce GTX 1070 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 22:46, hash: dcdcc23488

Short description of error
Filled cap of curve together with weld + bevel modifier doesn't have smooth shading.

Exact steps for others to reproduce the error
Launch below blend file and observe the non-smooth shading at the cap.
or
1- Launch default Blender.
2- Create a bezier and a circle curves.
3- Use circle as bevel object in bezier curve and enable fill caps option.
4- Create weld and bevel modifier for bezier curve object.
5- Disable clamp overlay, set limit method to angle and increase segment to 5, set offset 0.02m in bevel modifier.
6- Observe the non-smooth shading at the cap of the bezier curve.

Curve_Fill_Caps.blend

**System Information** Operating system: Windows-10 64 Bits Graphics card: GeForce GTX 1070 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 22:46, hash: `dcdcc23488` **Short description of error** Filled cap of curve together with weld + bevel modifier doesn't have smooth shading. **Exact steps for others to reproduce the error** Launch below blend file and observe the non-smooth shading at the cap. or 1- Launch default Blender. 2- Create a bezier and a circle curves. 3- Use circle as bevel object in bezier curve and enable fill caps option. 4- Create weld and bevel modifier for bezier curve object. 5- Disable clamp overlay, set limit method to angle and increase segment to 5, set offset 0.02m in bevel modifier. 6- Observe the non-smooth shading at the cap of the bezier curve. [Curve_Fill_Caps.blend](https://archive.blender.org/developer/F8404751/Curve_Fill_Caps.blend)

Added subscriber: @filibis

Added subscriber: @filibis

Added subscribers: @howardt, @mano-wii

Added subscribers: @howardt, @mano-wii

This comment was removed by @mano-wii

*This comment was removed by @mano-wii*

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

This issue was referenced by df2ed1550d

This issue was referenced by df2ed1550d69fc05892b9f5d392ff188e46504cd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-01-19 07:25:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74755
No description provided.